fix: Fix modal title and css overflow
- Fixes #58

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,12 @@ small.media-db-plugin-list-text{
 }
 
 .media-db-plugin-select-modal {
-	display: flex;
-	flex-direction: column;
+	display: contents;
 }
 
 .media-db-plugin-select-wrapper {
+	display: flex;
+	flex-direction: column;
 	margin: 5px;
 	flex: 1;
 	overflow-y: auto;
